# foreign-exchange-market

./: .gitignore  CMakeLists.txt  README.md
db/: market.db
src/: client.cpp  client.h  client_main.cpp  common.h  db_manager.cpp  db_manager.h  deal.cpp  deal.h  logger.cpp  logger.h  market.cpp  market.h  offer.cpp  offer.h  request_handler.cpp  request_handler.h  serializer.cpp  serializer.h  server.cpp  server.h  server_main.cpp  session.cpp  session.h  srializer.cpp  user_data.cpp  user_data.h
test/: CMakeLists.txt  test_market.cpp
